--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
+		<div id='map'></div>
 		<script async defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFacNeg2lg0_TPHTvl3mXr5_tEWtDIbFQ">
 		</script>
