teste para ensaio carioca 18/04

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
 	</head>
 	<body>
 		<div id='map'></div>		
+
+		<div style="position:fixed; z-index: 999999; top: 10px; color: red; right: 50%;">precisão: <span id='debug'></span></div> 
 	</body>
 </html>
