refactoring map.js

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,17 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
+
+		<div id="user_info">
+			<p>id: <span class="user_id"></span></p></br>
+			<p>nome: <span class="user_nome"></span></p></br>
+			<p>cor: <span class="user_cor"></span></p>
+		</div>
+
 		<div id='map'></div>		
 
-		<div style="position:fixed; z-index: 999999; top: 10px; color: red; right: 50%;">precisão: <span id='debug'></span></div> 
+		<div style="position:fixed; z-index: 999999; top: 10px; color: red; right: 50%;">
+			precisão: <span id='debug'></span>
+		</div>
 	</body>
 </html>
