--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Controle</title>
+		<title>Mapeamento</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="assets/css/style.css">
@@ -14,7 +14,7 @@
 			<p>cor: <span class="user_cor"></span></p>
 		</div>
 
-		<div id='map'></div>		
+		<div id='map'></div>
 
 		<div style="position:fixed; z-index: 999999; top: 10px; color: red; right: 50%;">
 			precisão: <span id='debug'></span>
