--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 		<div id='map'></div>
 
-		<div style="position:fixed; z-index: 999999; top: 10px; color: red; right: 50%;">
+		<div style="display: none;">
 			precisão: <span id='debug'></span>
 		</div>
 	</body>
